UI [ alignments,  ] resolved

--- a/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
+++ b/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
@@ -156,6 +156,10 @@
 .table_content th:last-child {
   border-radius: 0 0.6rem 0.6rem 0;
 }
+.table_content thead tr > th,
+.table_content tbody tr > td{
+  vertical-align: middle;
+}
 
 /* on game instances hover */
 .gameInstances:hover {
