--- a/src/pages/app/admin/masters/masterlist/masterlist.module.css
+++ b/src/pages/app/admin/masters/masterlist/masterlist.module.css
@@ -196,6 +196,11 @@
 .table_content tbody tr > td:nth-child(1) {
   min-width: 2rem;
 }
+.table_content thead tr > th,
+.table_content tbody tr > td{
+  vertical-align: middle;
+}
+
 .scenarioName:hover {
   text-decoration: underline;
   cursor: pointer;
