--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -56,6 +56,8 @@
   position: absolute;
   bottom: 0;
   right: 0.8rem;
+  margin-bottom: 0.5rem;
+
 }
 .mainContainer {
   width: 100%;
@@ -141,6 +143,10 @@
 }
 .table_content th:first-child {
   border-radius: 0.6rem 0 0 0.6rem;
+}
+.table_content thead tr > th,
+.table_content tbody tr > td{
+  vertical-align: middle;
 }
 
 /* Actions */
